# CEASp3

./: ChangeLog  INSTALL  LICENSE  README.md  build_genomebg.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml
CEAS/: Prob.py  R.py  annotator.py  bigwig_utils.py  ceas.py  ceas_bigwig.py  ceas_wig.py  corelib.py  graphics.py  inout.py  profiler.py  sampler.py  sitepro.py  sitepro_bigwig.py  sitepro_wig.py  tables.py
tests/: test_bigwig_utils.py  test_sitepro.py  test_siteproBW.py
