[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CEAS-Package"
version = "1.1.2"
description = "CEAS -- Cis-regulatory Element Annotation System Package"
authors = [
    { name = "H. Gene Shin", email = "shin@jimmy.harvard.edu" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3"
dependencies = ["bx-python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Artistic License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Topic :: Database",
]
urls = { Homepage = "http://liulab.dfci.harvard.edu/CEAS/" }

[tool.setuptools]
packages = ["CEAS"]
script-files = [
    "bin/ceas",
    "bin/ceasBW",
    "bin/sitepro",
    "bin/siteproBW",
    "bin/gca",
    "bin/build_genomeBG",
    "bin/ChIPAssoc",
]
