[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CEASp3"
version = "1.1.2"
description = "CEAS -- Cis-regulatory Element Annotation System Package (Python3)"
authors = [
	{ name = "Tao Liu (current maintaner", email = "vladimir.liu@gmail.com" },
	{ name = "H. Gene Shin (original author)", email = "shin@jimmy.harvard.edu" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3"
dependencies = ["bx-python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Artistic License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Topic :: Database",
]
urls = { Homepage = "http://liulab.dfci.harvard.edu/CEAS/" }

[tool.setuptools]
packages = ["CEASp3"]
script-files = [
    "bin/ceas",
    "bin/ceasBW",
    "bin/sitepro",
    "bin/siteproBW",
    "bin/gca",
    "bin/build_genomeBG",
    "bin/ChIPAssoc",
]
